--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -49,12 +49,6 @@
                         android:orientation="vertical"
                         android:gravity="center"
                         android:paddingVertical="16dp">
-                        <ImageView
-                            android:id="@+id/img_profil"
-                            android:layout_width="90dp"
-                            android:layout_height="100dp"
-                            android:background="@drawable/default_img_tmp">
-                        </ImageView>
                         <TextView
                             android:id="@+id/nama_lengkap"
                             android:layout_width="wrap_content"
@@ -260,7 +254,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/primary"
-                                    android:textStyle="bold">
+                                    android:textStyle="bold"
+                                    android:textAlignment="textEnd">
                                 </TextView>
                             </LinearLayout>
                         </LinearLayout>
@@ -324,11 +319,49 @@
                                 android:textStyle="bold">
                             </TextView>
                         </LinearLayout>
-
-
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
+                <RelativeLayout
+                    android:id="@+id/btn_barcode"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="8dp"
+                    android:visibility="gone"
+                    android:background="@drawable/bt_white_round">
 
+                    <ImageView
+                        android:id="@+id/ic_barcode"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:background="@drawable/ic_barcode">
+                    </ImageView>
+
+                    <TextView
+                        android:id="@+id/txt_barcode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:layout_toRightOf="@+id/ic_barcode"
+                        android:text="Barcode ID Peserta"
+                        android:textColor="#CE3032"
+                        android:textSize="16sp"
+                        android:textStyle="bold">
+                    </TextView>
+
+                    <ImageView
+                        android:id="@id/ic_arrow1"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="16dp"
+                        android:background="@drawable/ic_arrow_right"/>
+
+                </RelativeLayout>
                 <RelativeLayout
                     android:id="@+id/btn_setting"
                     android:layout_width="match_parent"
