--- a/app/src/main/res/layout/activity_detail_ak1.xml
+++ b/app/src/main/res/layout/activity_detail_ak1.xml
@@ -322,22 +322,22 @@
         </TextView>
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/lapor"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="60dp"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:layout_marginHorizontal="16dp"-->
-<!--        android:gravity="center"-->
-<!--        android:background="@drawable/bt_red_round">-->
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Laporan Telah Mendapat Pekerjaan"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="16sp"-->
-<!--            android:textStyle="bold">-->
-<!--        </TextView>-->
-<!--    </LinearLayout>-->
+    <LinearLayout
+        android:id="@+id/lapor"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="16dp"
+        android:gravity="center"
+        android:background="@drawable/bt_red_round">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Laporan Telah Mendapat Pekerjaan"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold">
+        </TextView>
+    </LinearLayout>
 
 </LinearLayout>
