--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -186,6 +186,17 @@
             android:textStyle="bold"></TextView>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/lupa_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:text="Lupa Password"
+        android:textStyle="bold"
+        android:textColor="@color/tetriary">
+    </TextView>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
