--- a/app/src/main/res/layout/popup_profil.xml
+++ b/app/src/main/res/layout/popup_profil.xml
@@ -1,168 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/bg_pop_up_profile"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/close"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/ic_close_popup">
+    </ImageView>
+
+    <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bg_pop_up_profile">
-
-        <ImageView
-            android:id="@+id/close"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/ic_close_popup">
-        </ImageView>
-
-        <RelativeLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_below="@+id/close">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="8dp"
-                android:gravity="center">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_marginHorizontal="8dp">
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:background="@drawable/logo_jbr">
-                    </ImageView>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Aplikasi J E-KAPEKA"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        android:textColor="@color/tetriary">
-                    </TextView>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Dinas Tenaga Kerja"
-                        android:textSize="18sp"
-                        android:textColor="@color/black">
-                    </TextView>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Kabupaten Jember"
-                        android:textSize="18sp"
-                        android:textColor="@color/black">
-                    </TextView>
-                </LinearLayout>
-            </LinearLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
+        android:layout_height="90dp">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/header"
-            android:layout_above="@+id/footer">
+            android:paddingHorizontal="8dp"
+            android:gravity="center">
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:layout_marginHorizontal="8dp">
                 <ImageView
-                    android:id="@+id/pas_foto"
-                    android:layout_width="150dp"
-                    android:layout_height="190dp"
-                    android:background="#BABABA">
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@drawable/logo_jbr">
                 </ImageView>
-
-                <TextView
-                    android:id="@+id/nama_peserta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Nama Peserta Pencari Kerja"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black">
-                </TextView>
-
-                <TextView
-                    android:id="@+id/nik_peserta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="3509212604950009"
-                    android:textSize="16sp"
-                    android:textColor="@color/black">
-                </TextView>
             </LinearLayout>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/footer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/primary"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingVertical="10dp">
-
-            <TextView
-                android:id="@+id/no_kartu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="ID Kartu : 3509212604950009"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold"></TextView>
-
-            <ImageView
-                android:id="@+id/barcode"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="20dp"
-                android:background="@color/white"></ImageView>
-
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:weightSum="2">
-
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:text="Berlaku Hingga :"
-                    android:textColor="@color/white"></TextView>
-
+                    android:text="Nomor ID E-KAPEKA"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/tetriary">
+                </TextView>
                 <TextView
-                    android:id="@+id/masa_berlaku"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:text="24 Agustus 2024"
-                    android:textColor="@color/white"></TextView>
+                    android:text="Dinas Tenaga Kerja"
+                    android:textSize="18sp"
+                    android:textColor="@color/black">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Kabupaten Jember"
+                    android:textSize="18sp"
+                    android:textColor="@color/black">
+                </TextView>
             </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="16dp"
+        android:gravity="center">
+        <ImageView
+            android:id="@+id/pas_foto"
+            android:layout_width="120dp"
+            android:layout_height="160dp"
+            android:background="#BABABA">
+        </ImageView>
 
+        <TextView
+            android:id="@+id/nama_peserta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Nama Peserta Pencari Kerja"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black">
+        </TextView>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/nik_peserta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3509212604950009"
+            android:textSize="16sp"
+            android:textColor="@color/black">
+        </TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/primary"
+        android:layout_gravity="center"
+        android:padding="16dp">
+        <ImageView
+            android:id="@+id/barcode"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/white">
+        </ImageView>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/no_kartu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="ID Kartu : 3509212604950009"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:textStyle="bold">
+    </TextView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:weightSum="2">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Berlaku Hingga :"
+            android:textColor="@color/black"></TextView>
+
+        <TextView
+            android:id="@+id/masa_berlaku"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:text="24 Agustus 2024"
+            android:textColor="@color/black"></TextView>
+    </LinearLayout>
+
+</LinearLayout>
