--- a/app/src/main/res/layout/popup_profil.xml
+++ b/app/src/main/res/layout/popup_profil.xml
@@ -43,7 +43,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="KAPEKA.ID"
+                    android:text="J SAKA.ID"
                     android:textStyle="bold"
                     android:textSize="20sp"
                     android:textColor="@color/tetriary">
