--- a/app/src/main/res/layout/activity_tambah_ak1.xml
+++ b/app/src/main/res/layout/activity_tambah_ak1.xml
@@ -64,7 +64,7 @@
                         android:layout_marginBottom="8dp"
                         android:orientation="vertical">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Sebelum mengajukan pembuatan kartu AK1, pastikan anda telah melengkapi data-data yang diperlukan sebagai berikut :"
