--- a/app/src/main/res/layout/activity_bahasa.xml
+++ b/app/src/main/res/layout/activity_bahasa.xml
@@ -69,60 +69,69 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_marginHorizontal="16dp">
-                    <androidx.appcompat.widget.SwitchCompat
+                    <Switch
                         android:id="@+id/bhs_inggris"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Inggris">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_mandarin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Mandarin">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_jepang"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Jepang">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_korea"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Korea">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_jerman"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Jerman">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_rusia"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Rusia">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_italia"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Italia">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_hindi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Bahasa Hindi">
-                    </androidx.appcompat.widget.SwitchCompat>
-                    <androidx.appcompat.widget.SwitchCompat
+                    </Switch>
+                    <Switch
                         android:id="@+id/bhs_lainnya"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:text="Lainnya">
-                    </androidx.appcompat.widget.SwitchCompat>
+                    </Switch>
                 </LinearLayout>
             </ScrollView>
 
@@ -138,7 +147,7 @@
             android:gravity="center">
 
             <LinearLayout
-                android:id="@+id/btn_ak1"
+                android:id="@+id/btn_simpan"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_marginHorizontal="16dp"
@@ -148,7 +157,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Buat Kartu AK1"
+                    android:text="Simpan"
                     android:textAllCaps="false"
                     android:textColor="#FFF"
                     android:textStyle="bold"></TextView>
