--- a/app/src/main/res/layout/activity_ktpactivity.xml
+++ b/app/src/main/res/layout/activity_ktpactivity.xml
@@ -38,7 +38,7 @@
         android:id="@+id/img_pas_foto"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:background="@drawable/default_img_tmp"
+        android:background="#BABABA"
         android:layout_marginTop="16dp"
         android:layout_gravity="center">
     </ImageView>
