--- a/app/src/main/res/layout/activity_pas_foto.xml
+++ b/app/src/main/res/layout/activity_pas_foto.xml
@@ -43,7 +43,7 @@
             android:id="@+id/img_pas_foto"
             android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:background="@drawable/default_img_tmp">
+            android:background="#BABABA">
         </ImageView>
         <LinearLayout
             android:layout_width="match_parent"
